@@ -157,6 +157,7 @@
 				<div class="adr">
 					<span class="type" style="display:none">Work</span>
 					<div class="tx_egovapi_block_contact_address street-address">{service.contact.address}</div>
+					<div class="tx_egovapi_block_contact_poBox post-office-box">{service.contact.poBox}</div>
 					<span style="display:none">
 						<abbr title="Switzerland" class="country-name">CH</abbr> -
 					</span>
